Code review Part 3.